# bnn

./: .gitignore  README.md  mnist.py  pyproject.toml
benchmarks/: baselines.py  bnn_model.py  datasets.py  plot_metaparams.py  run.py  test_benchmarks.py
bnn/: __init__.py  abstract.py  dense.py  dense_tests.py  mnist.py  predictive.py  predictive_tests.py
docs/: predictive_coding.md
tests/: test_binary_neuron.py
