[tool.poetry]
name = "bnn"
version = "0.1.0"
description = ""
authors = ["Jan Rydzewski <flegmer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-mnist = "^0.7"
numpy = "^1.21.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
