[tool.poetry]
name = "bnn"
version = "0.1.0"
description = ""
authors = ["Jan Rydzewski <flegmer@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.12.*"
numpy = "==2.*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
python-mnist = "*"
tqdm = "*"
black = "*"
flake8 = "*"
flake8-isort = "*"
flake8-pyproject = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true

[tool.flake8]
ignore = ["E501"]
